# idto

./: README.md  harpy_planar_walking.py
examples/: example_base.cc  example_base.h
examples/allegro_franka/: BUILD.bazel  allegro_franka.cc  allegro_franka.yaml  no_manipuland.cc  no_manipuland.yaml
examples/allegro_hand/: allegro_hand.cc
examples/harpy/: BUILD.bazel  harpy_2d.cc  harpy_2d.yaml
examples/models/: fr3_algr_minimal_collision.urdf  harpy_2d.urdf  harpy_hopper.urdf  harpy_planar.urdf  pen.sdf
examples/models/meshes/fr3/visual/: convert.sh
models/achilles/: achilles.urdf  achilles_planar.urdf
optimizer/: trajectory_optimizer.cc  trajectory_optimizer.h  trajectory_optimizer_state.h
python_bindings/: CMakeLists.txt  pyidto.cc  solver_parameters_py.cc  trajectory_optimizer_py.cc  trajectory_optimizer_state_py.cc
python_examples/: achilles.py  achilles_mpc.py  achilles_planar.py  achilles_planar_mpc.py
scripts/: visualize_allegro_franka.py
